[gd_scene load_steps=10 format=3 uid="uid://bl2na2v7107kn"]

[ext_resource type="Texture2D" uid="uid://lda0b2bll8w2" path="res://assets/Level_2_background.jpg" id="1_3oc74"]
[ext_resource type="PackedScene" uid="uid://cadvemuqbliqd" path="res://scenes/grid.tscn" id="2_kinr6"]
[ext_resource type="Script" uid="uid://dqh64gy11f7v0" path="res://scripts/game_manager.gd" id="2_pxwbd"]
[ext_resource type="Script" uid="uid://b5211dd1e5dqc" path="res://scripts/player.gd" id="3_rca61"]
[ext_resource type="Script" uid="uid://dooasanxr8hyo" path="res://scripts/spawner.gd" id="3_rum4d"]
[ext_resource type="Script" uid="uid://yl01u7g4rolf" path="res://scripts/label.gd" id="6_1i8jf"]
[ext_resource type="Script" uid="uid://d0s6ikmrxqou8" path="res://scripts/item_enemy.gd" id="6_svpld"]
[ext_resource type="Script" uid="uid://76ylf5f28dxc" path="res://scripts/victory_ui.gd" id="8_rum4d"]
[ext_resource type="Script" uid="uid://bn34j053s8h5s" path="res://scripts/defeat_ui.gd" id="9_3oc74"]

[node name="BattleScene" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(279.3, 574.5)
scale = Vector2(1.948, 1.6)
texture = ExtResource("1_3oc74")

[node name="Board" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Spawner" type="Node" parent="Board"]
script = ExtResource("3_rum4d")
gm_path = NodePath("../GameManager")
enemy_container_path = NodePath("../Pieces/Enemy")
enemy_ground_path = NodePath("../Ground/EnemyGround")
bonus_ground_path = NodePath("../Ground/BonusGround")
normal_counts_per_turn = [2, 2, 2, 1, 1, 3, 3, 1, 2, 2]

[node name="GameManager" type="Node" parent="Board"]
script = ExtResource("2_pxwbd")
max_steps_per_turn = 5
shots_per_turn = 3

[node name="Ground" type="VBoxContainer" parent="Board"]
layout_mode = 0
offset_left = 580.0
offset_top = 80.0
offset_right = 992.0
offset_bottom = 1000.0
theme_override_constants/separation = 50

[node name="BonusGround" parent="Board/Ground" instance=ExtResource("2_kinr6")]
layout_mode = 2
columns = 4
width = 4
height = 1

[node name="EnemyGround" parent="Board/Ground" instance=ExtResource("2_kinr6")]
layout_mode = 2
columns = 4
width = 4

[node name="PlayerGround" parent="Board/Ground" instance=ExtResource("2_kinr6")]
layout_mode = 2
columns = 4
width = 4
height = 2

[node name="DangerLine" type="ColorRect" parent="Board"]
layout_mode = 0
offset_left = 554.0
offset_top = 768.0
offset_right = 594.0
offset_bottom = 788.0
scale = Vector2(11.595646, 0.39999992)
color = Color(0.8509804, 0.2, 0.2, 1)

[node name="Pieces" type="Control" parent="Board"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Player" type="Control" parent="Board/Pieces"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_rca61")
ground_path = NodePath("../../Ground/PlayerGround")
bonus_ground_path = NodePath("../../Ground/BonusGround")
game_manager_path = NodePath("../../GameManager")

[node name="Enemy" type="Control" parent="Board/Pieces"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ItemEnemy" type="Control" parent="Board/Pieces"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_svpld")
ground_path = NodePath("../../Ground/BonusGround")
runtime_active = false

[node name="Label" type="Label" parent="Board"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 80.0
offset_top = 200.0
offset_right = 120.0
offset_bottom = 310.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 60
script = ExtResource("6_1i8jf")
game_manager_path = NodePath("../GameManager")

[node name="HUD" type="CanvasLayer" parent="Board"]
layer = 10

[node name="CenterContainer" type="CenterContainer" parent="Board/HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryUI" type="Control" parent="Board/HUD/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("8_rum4d")
next_level_path = ""

[node name="DefeatUI" type="Control" parent="Board/HUD/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("9_3oc74")
